change time to 1h

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h1>Countdown</h1>
+<h1>Dein geschenk kommt in</h1>
 <p id="demo"></p>
 
 
@@ -22,7 +22,7 @@ xhr.send();
 function countdownTimeStart(){
 
 var today = new Date();
-var countDownDate = today.setHours(today.getHours() + 4);
+var countDownDate = today.setHours(today.getHours() + 1);
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -51,6 +51,6 @@ var x = setInterval(function() {
 }
 
 </script>
-
+<h1>zu dir!</h1>
 </body>
 </html>
